node_app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodeapp-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: minhcuong/nodeapp
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
