node_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  labels:
    app: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
  - port: 3000
    protocol: TCP 
  type: LoadBalancer
