ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  backend:
    serviceName: my-nginx-svc
    servicePort: 80
